add form to contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .bg-color-work-history {
     background-color: #9b59b6;
 }
